fix(Table): Removed constrained widths from td and th elements. Added Chrome scrollbar.

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,4 +1,5 @@
-.bp-table {
+.bp-table,
+.bp-table-chart table {
   display: table;
   table-layout: fixed;
 
@@ -23,6 +24,7 @@
       white-space: normal;
       word-break: keep-all;
       text-align: left;
+      overflow: hidden;
 
       &:first-of-type {
         padding-left: $bp-table_edge-padding;
@@ -41,11 +43,13 @@
     line-height: $bp-table_body-line-height;
     font-weight: $bp-table_body-font-weight;
 
-    white-space: nowrap;
-    text-align: left;
-
     td {
       padding: $bp-table_td-padding;
+
+      white-space: normal;
+      word-break: break-word;
+      overflow: hidden;
+      text-align: left;
 
       &:first-of-type {
         padding-left: $bp-table_edge-padding;
@@ -68,21 +72,20 @@
 
   }
 
-  &.bp-table--scroll-y {
+  &.bp-table--scroll-y,
+  &.bp-table-chart--scroll-y table {
     display: flex;
-    table-layout: none;
     flex-direction: column;
 
     thead {
       flex: 0 0 auto;
       display: block;
       tr {
-        width: calc(100% - 1.7*$m);
+        width: calc(100% - 1.7*#{$m});
       }
     }
 
     tbody {
-      height: 20*$m;
       flex: 1 1 auto;
       display: block;
 
@@ -92,25 +95,13 @@
 
       overflow-y: auto;
       overflow-x: hidden;
+      @include scrollbar($bp-color-time);
     }
 
     thead tr,
     tbody tr {
       display: table;
       table-layout: fixed;
-
-      th,
-      td {
-        width: 25%;
-        min-width: 15*$m;
-        flex-shrink: 0;
-
-        &:first-child {
-          width: 50%;
-          min-width: 20*$m;
-        }
-      }
     }
   }
-
 }
